--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,7 @@
   <div class="project-card fade-in-left">
     <h3>Project 1: Personal Portfolio</h3>
     <p>A modern portfolio website built using HTML, CSS with blue-purple gradients and interactive timeline.</p>
+    <p>GitHub: <a href="https://github.com/Ankit357-code/PersonalPortfolio/tree/main" target="_blank" class="github-link">View Project</a></p>
   </div>
   <div class="project-card fade-in-left">
     <h3>Project 2: Shopping Cart</h3>
